--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "react-qr-reader": "^3.0.0-beta-1"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.14",
     "eslint": "8.12.0",
-    "eslint-config-next": "12.1.1"
+    "eslint-config-next": "12.1.1",
+    "postcss": "^8.4.27",
+    "tailwindcss": "^3.3.3"
   }
 }
