--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "next": "12.1.1",
+    "next-pwa": "^5.6.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-qr-code": "^2.0.3",
