--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-qr-code": "^2.0.3",
-    "react-qr-reader": "^3.0.0-beta-1"
+    "react-qr-reader": "^3.0.0-beta-1",
+    "sweetalert2": "^11.7.29"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
